[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/OptionsButtonSelected.png" type="Texture" id=1]
[ext_resource path="res://LinkText.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/UIs/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/OptionsNew.gd" type="Script" id=4]
[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/newPhysGun3.png" type="Texture" id=6]
[ext_resource path="res://sprites/PhysGunGlowReal.png" type="Texture" id=7]
[ext_resource path="res://sprites/newPhysGun3Glow.png" type="Texture" id=8]
[ext_resource path="res://sounds/menuSelect.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.207843, 0.235294, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0980392, 0.0901961, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=12]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=4]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 23, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 46, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 69, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 92, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 115, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 138, 0, 23, 10 )

[sub_resource type="AtlasTexture" id=10]
flags = 1
atlas = ExtResource( 8 )
region = Rect2( 161, 0, 23, 10 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="SliderChanged" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.207843 )
margin_left = 44.0
margin_top = 137.0
margin_right = 288.0
margin_bottom = 249.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.207843 )
margin_left = 408.0
margin_top = 86.0
margin_right = 965.0
margin_bottom = 445.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VisualsAndAudio" type="LinkButton" parent="."]
margin_left = 60.0
margin_top = 146.0
margin_right = 266.0
margin_bottom = 176.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Visuals & Audio"
underline = 2

[node name="PhysicsAndStuff" type="LinkButton" parent="."]
margin_left = 60.0
margin_top = 176.0
margin_right = 272.0
margin_bottom = 206.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Physics & Stuff"
underline = 2

[node name="Experimental" type="LinkButton" parent="."]
margin_left = 60.0
margin_top = 206.0
margin_right = 272.0
margin_bottom = 236.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Experimental"
underline = 2

[node name="Exit" parent="." instance=ExtResource( 3 )]
margin_left = 929.0
margin_top = 555.0
margin_right = 1014.0
margin_bottom = 600.0

[node name="VisualsAndAudioTab" type="Control" parent="."]
margin_left = 413.0
margin_top = 90.0
margin_right = 961.0
margin_bottom = 441.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="VisualsAndAudioTab"]
margin_left = 4.0
margin_right = 210.0
margin_bottom = 30.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 12 )
text = "Visuals & Audio"

[node name="Shadow" type="Label" parent="VisualsAndAudioTab/Title"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = 2.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Visuals & Audio"

[node name="VolumeSlider" type="HSlider" parent="VisualsAndAudioTab"]
margin_left = 3.0
margin_top = 65.0
margin_right = 451.0
margin_bottom = 81.0
focus_mode = 0
min_value = -50.0
max_value = 10.0
rounded = true
scrollable = false
tick_count = 5

[node name="VolumeLabel" type="Label" parent="VisualsAndAudioTab/VolumeSlider"]
margin_left = 2.0
margin_top = -28.0
margin_right = 98.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Volume"

[node name="Fullscreen" type="CheckBox" parent="VisualsAndAudioTab"]
margin_left = -2.0
margin_top = 89.0
margin_right = 186.0
margin_bottom = 127.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "FULLSCREEN"
icon_align = 1
expand_icon = true

[node name="ShowFPS" type="CheckBox" parent="VisualsAndAudioTab"]
margin_left = -2.0
margin_top = 121.0
margin_right = 186.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 50, 13 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
pressed = true
text = "show fps"
icon_align = 1
expand_icon = true

[node name="ShowUseIndicator" type="CheckBox" parent="VisualsAndAudioTab"]
margin_left = -2.0
margin_top = 153.0
margin_right = 280.0
margin_bottom = 191.0
rect_pivot_offset = Vector2( 50, 13 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
pressed = true
enabled_focus_mode = 0
text = "show use indicator"
icon_align = 1
expand_icon = true

[node name="PhysGun" type="Control" parent="VisualsAndAudioTab"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="PhysGunLabel" type="Label" parent="VisualsAndAudioTab/PhysGun"]
margin_left = 344.0
margin_top = 99.0
margin_right = 652.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 2 )
text = "physgun color"

[node name="PhysGunColor" type="ColorPicker" parent="VisualsAndAudioTab/PhysGun"]
margin_left = 411.0
margin_top = 150.0
margin_right = 719.0
margin_bottom = 586.0
rect_scale = Vector2( 0.5, 0.5 )
presets_enabled = false
presets_visible = false

[node name="Sprite" type="Sprite" parent="VisualsAndAudioTab/PhysGun"]
position = Vector2( 360, 305 )
rotation = -1.57079
scale = Vector2( 3.1, 3.1 )
texture = ExtResource( 6 )

[node name="littleshits" type="AnimatedSprite" parent="VisualsAndAudioTab/PhysGun/Sprite"]
material = SubResource( 14 )
frames = SubResource( 11 )
frame = 6
playing = true

[node name="Glow" type="Sprite" parent="VisualsAndAudioTab/PhysGun/Sprite"]
material = SubResource( 13 )
position = Vector2( 3.22575, -26.7742 )
texture = ExtResource( 7 )

[node name="PhysicsAndStuffTab" type="Control" parent="."]
visible = false
margin_left = 413.0
margin_top = 90.0
margin_right = 961.0
margin_bottom = 441.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="PhysicsAndStuffTab"]
margin_left = 4.0
margin_right = 210.0
margin_bottom = 30.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 12 )
text = "Physics & stuff"

[node name="Shadow" type="Label" parent="PhysicsAndStuffTab/Title"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = 2.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Physics & stuff"

[node name="ControlsButton" type="Button" parent="PhysicsAndStuffTab"]
margin_left = 3.0
margin_top = 45.0
margin_right = 278.0
margin_bottom = 87.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Controls"

[node name="Controls" type="Control" parent="PhysicsAndStuffTab"]
margin_left = -413.0
margin_top = -90.0
margin_right = -373.0
margin_bottom = -50.0

[node name="Panel" type="Panel" parent="PhysicsAndStuffTab/Controls"]
self_modulate = Color( 1, 1, 1, 0.207843 )
margin_left = 45.0
margin_top = 255.0
margin_right = 406.0
margin_bottom = 499.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="PhysicsAndStuffTab/Controls"]
margin_left = 55.0
margin_top = 259.0
margin_right = 183.0
margin_bottom = 289.0
custom_fonts/font = ExtResource( 2 )
text = "controls"

[node name="Label2" type="Label" parent="PhysicsAndStuffTab/Controls"]
margin_left = 56.0
margin_top = 290.0
margin_right = 400.0
margin_bottom = 433.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 2 )
text = "wasd - move around
1,2,3 - hotbar shiz
right click - rotate held object
e - interact
q - spawn menu
shift - sprint
v - noclip
t - teleport to cursor
m - toggle map view"

[node name="ExperimentalTab" type="Control" parent="."]
visible = false
margin_left = 413.0
margin_top = 90.0
margin_right = 961.0
margin_bottom = 441.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="ExperimentalTab"]
margin_left = 4.0
margin_right = 210.0
margin_bottom = 30.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 12 )
text = "experimental"

[node name="Shadow" type="Label" parent="ExperimentalTab/Title"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = 2.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "experimental"

[node name="InteractWithPhysics" type="CheckBox" parent="ExperimentalTab"]
margin_left = -1.0
margin_top = 52.0
margin_right = 187.0
margin_bottom = 90.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "interact with physics"
icon_align = 1
expand_icon = true

[node name="Music" type="CheckBox" parent="ExperimentalTab"]
margin_left = -1.0
margin_top = 84.0
margin_right = 323.0
margin_bottom = 122.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "music"
icon_align = 1
expand_icon = true

[node name="Glow" type="CheckBox" parent="ExperimentalTab"]
margin_left = -2.0
margin_top = 116.0
margin_right = 186.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 50, 13 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "glow"
icon_align = 1
expand_icon = true

[node name="Mods" type="CheckBox" parent="ExperimentalTab"]
visible = false
margin_left = -2.0
margin_top = 148.0
margin_right = 186.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 50, 13 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "mods"
icon_align = 1
expand_icon = true

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -178.5
margin_top = -100.0
margin_right = 178.5
margin_bottom = -45.0
texture = ExtResource( 1 )
expand = true

[connection signal="button_up" from="VisualsAndAudio" to="." method="_on_VisualsAndAudio_button_up"]
[connection signal="button_up" from="PhysicsAndStuff" to="." method="_on_PhysicsAndStuff_button_up"]
[connection signal="button_up" from="Experimental" to="." method="_on_Experimental_button_up"]
[connection signal="button_up" from="Exit" to="." method="_on_Exit_button_up"]
[connection signal="value_changed" from="VisualsAndAudioTab/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="toggled" from="VisualsAndAudioTab/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="VisualsAndAudioTab/ShowFPS" to="." method="_on_ShowFPS_toggled"]
[connection signal="toggled" from="VisualsAndAudioTab/ShowUseIndicator" to="." method="_on_ShowUseIndicator_toggled"]
[connection signal="color_changed" from="VisualsAndAudioTab/PhysGun/PhysGunColor" to="." method="_on_PhysGunColor_color_changed"]
[connection signal="button_up" from="PhysicsAndStuffTab/ControlsButton" to="." method="_on_ControlsButton_button_up"]
[connection signal="toggled" from="ExperimentalTab/InteractWithPhysics" to="." method="_on_InteractWithPhysics_toggled"]
[connection signal="toggled" from="ExperimentalTab/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="ExperimentalTab/Glow" to="." method="_on_Glow_toggled"]
[connection signal="toggled" from="ExperimentalTab/Mods" to="." method="_on_Mods_toggled"]
